[gd_scene load_steps=2 format=3 uid="uid://mainmenu"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.067, 0.082, 0.145, 1)

[node name="Panel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -320.0
offset_right = 220.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Title" type="Label" parent="Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 58
text = "BURZEN\nTower Defense"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Panel"]
layout_mode = 2
modulate = Color(0.91, 0.94, 1, 0.8)
text = "XODEX Prototype"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
text = "Play"


[node name="SeedInput" type="LineEdit" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
placeholder_text = "Seed (optional)"

[node name="SettingsButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(0, 88)
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1

[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_pressed"]
